--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:25+0200\n"
+"PO-Revision-Date: 2011-08-11 18:26+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12250,10 +12250,9 @@ msgid "Threads that are slow to launch"
 msgstr ""
 
 #: po/advisory_rules.php:211
-#, fuzzy
 #| msgid "The number of threads that are not sleeping."
 msgid "There are too many threads that are slow to launch."
-msgstr "Hala faaliyette olan işlemler sayısıdır."
+msgstr "Çalıştırmak için yavaş olan çok fazla işlem var."
 
 #: po/advisory_rules.php:212
 msgid ""
