--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:26+0200\n"
+"PO-Revision-Date: 2011-08-11 18:27+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1462,7 +1462,7 @@ msgstr "Ponovno naloži stran"
 
 #: js/messages.php:179
 msgid "Affected rows:"
-msgstr ""
+msgstr "Spremenjene vrstice:"
 
 #: js/messages.php:181
 msgid "Failed parsing config file. It doesn't seem to be valid JSON code"
