--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:27+0200\n"
+"PO-Revision-Date: 2011-08-11 18:28+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1493,7 +1493,7 @@ msgstr "Svetovalni sistem"
 
 #: js/messages.php:190
 msgid "Possible performance issues"
-msgstr ""
+msgstr "Morebitni spori zmogljivosti"
 
 #: js/messages.php:191
 msgid "Issue"
