--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:28+0200\n"
+"PO-Revision-Date: 2011-08-11 18:29+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1505,10 +1505,9 @@ msgid "Recommendation"
 msgstr "Priporočilo"
 
 #: js/messages.php:193
-#, fuzzy
 #| msgid "Details"
 msgid "Rule details"
-msgstr "Podrobnosti"
+msgstr "Podrobnosti pravila"
 
 #: js/messages.php:194
 #, fuzzy
