--- a/po/sl.po
+++ b/po/sl.po
@@ -2200,10 +2200,9 @@ msgid "This MySQL server does not support the %s storage engine."
 msgstr "Ta strežnik MySQL ne podpira skladiščnega pogona %s."
 
 #: libraries/Table.class.php:303
-#, fuzzy
 #| msgid "Show slave status"
 msgid "unknown table status: "
-msgstr "Prikaži stanje podrejencev"
+msgstr "neznano stanje tabele: "
 
 #: libraries/Table.class.php:1034
 msgid "Invalid database"
