--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:33+0200\n"
+"PO-Revision-Date: 2011-08-11 18:34+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -2382,10 +2382,9 @@ msgid "PBMS get BLOB info failed:"
 msgstr "Pridobivanje informacij BLOB PBMS je spodletelo:"
 
 #: libraries/blobstreaming.lib.php:332
-#, fuzzy
 #| msgid "get BLOB Content-Type failed"
 msgid "PBMS get BLOB Content-Type failed"
-msgstr "pridobivanje Content-Type BLOB je spodletelo"
+msgstr "Pridobivanje Content-Type BLOB PBMS je spodletelo"
 
 #: libraries/blobstreaming.lib.php:358
 msgid "View image"
