Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -2670,11 +2670,10 @@ msgstr "Prejšnja"
 #: libraries/common.lib.php:2297 libraries/common.lib.php:2300
 #: libraries/display_tbl.lib.php:370 server_binlog.php:170
 #: server_binlog.php:172
-#, fuzzy
 #| msgid "Next"
 msgctxt "Next page"
 msgid "Next"
-msgstr "Naslednji"
+msgstr "Naslednja"
 
 #: libraries/common.lib.php:2298 libraries/common.lib.php:2301
 #: libraries/display_tbl.lib.php:385
