Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4212,7 +4212,7 @@ msgstr "Prikaži gumb za pomoč"
 
 #: libraries/config/messages.inc.php:357
 msgid "Save all edited cells at once"
-msgstr ""
+msgstr "Shrani vse urejene celice naenkrat"
 
 #: libraries/config/messages.inc.php:358
 msgid "Directory where exports can be saved on server"
