--- a/po/sl.po
+++ b/po/sl.po
@@ -6449,10 +6449,10 @@ msgid "Go to database"
 msgstr "Pojdi v zbirko podatkov"
 
 #: libraries/import.lib.php:1085 libraries/import.lib.php:1109
-#, fuzzy, php-format
+#, php-format
 #| msgid "Missing data for %s"
 msgid "Edit settings for %s"
-msgstr "Manjkajoči podatki za %s"
+msgstr "Uredi nastavitve za %s"
 
 #: libraries/import.lib.php:1104
 msgid "Go to table"
