Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -6459,10 +6459,10 @@ msgid "Go to table"
 msgstr "Pojdi v tabelo"
 
 #: libraries/import.lib.php:1107
-#, fuzzy, php-format
+#, php-format
 #| msgid "Structure only"
 msgid "Structure of %s"
-msgstr "Samo struktura"
+msgstr "Struktura %s"
 
 #: libraries/import.lib.php:1113
 msgid "Go to view"
