--- a/po/sl.po
+++ b/po/sl.po
@@ -8193,10 +8193,9 @@ msgid "No databases"
 msgstr "Brez zbirk podatkov"
 
 #: navigation.php:270
-#, fuzzy
 #| msgid "filter tables by name"
 msgid "Filter tables by name"
-msgstr "filtriraj tabele po imenu"
+msgstr "Filtriraj tabele po imenu"
 
 #: navigation.php:303 navigation.php:304
 msgctxt "short form"
