Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:38+0200\n"
+"PO-Revision-Date: 2011-08-11 18:39+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -9279,10 +9279,9 @@ msgid "Related links:"
 msgstr "Sorodne povezave:"
 
 #: server_status.php:758
-#, fuzzy
 #| msgid "Query type"
 msgid "Run analyzer"
-msgstr "Vrsta poizvedbe"
+msgstr "Zaženi analitik"
 
 #: server_status.php:759
 #, fuzzy
