Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:39+0200\n"
+"PO-Revision-Date: 2011-08-11 18:40+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -10096,10 +10096,9 @@ msgid "Refresh rate"
 msgstr "Hitrost osveževanja"
 
 #: server_status.php:1415
-#, fuzzy
 #| msgid "Chart columns:"
 msgid "Chart columns"
-msgstr "Stolpci grafikona:"
+msgstr "Stolpci grafikona"
 
 #: server_status.php:1431
 #, fuzzy
