--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 18:39+0200\n"
+"PO-Revision-Date: 2011-08-11 20:47+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12456,10 +12456,9 @@ msgid "Your absolute InnoD log size is %s MiB"
 msgstr ""
 
 #: po/advisory_rules.php:260
-#, fuzzy
 #| msgid "Buffer pool size"
 msgid "InnoDB buffer pool size"
-msgstr "Arabellek havuzu boyutu"
+msgstr "InnoDB arabellek havuzu boyutu"
 
 #: po/advisory_rules.php:261
 msgid "Your InnoDB buffer pool is fairly small."
