Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 20:48+0200\n"
+"PO-Revision-Date: 2011-08-11 20:49+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1469,7 +1469,7 @@ msgstr "Danışman sistemi"
 
 #: js/messages.php:190
 msgid "Possible performance issues"
-msgstr ""
+msgstr "Olası performans sorunları"
 
 #: js/messages.php:191
 msgid "Issue"
