Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -1492,7 +1492,7 @@ msgstr "Gerekçe"
 
 #: js/messages.php:195
 msgid "Used variable / formula"
-msgstr ""
+msgstr "Kullanılan değişken / formül"
 
 #: js/messages.php:196
 msgid "Test"
