Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-11 20:50+0200\n"
+"PO-Revision-Date: 2011-08-11 22:52+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -9271,6 +9271,16 @@ msgid ""
 "database, and undo the change if there was no clearly measurable improvement."
 "</p>"
 msgstr ""
+"Danışman sistemi sunucu durumu değişkenlerini çözümleyerek sunucu "
+"değişkenleri üzerinde tavsiyelerde bulunabilir. <p>Not alın ancak bu sistem "
+"basit hesaplamalara dayanarak ve sisteminize muhakkak uygulanamayan başlıca "
+"kurallar tarafından tavsiyelerde bulunur.</p> <p>Yapılandırmanın herhangi "
+"bir değişiminden önce, neyi değiştirdiğinizi (belgeyi okuyarak) "
+"bildiğinizden ve değişikliği nasıl geri alıcağınızdan emin olun. Yanlış "
+"ayarlamalar performans üzerinde çok olumsuz etkiler yapabilir.</p> "
+"<p>Sisteminizi ayarlamanın en iyi yolu bir seferde sadece bir ayar "
+"değiştirmek, gözlemlemek veya veritabanınızı kıyaslamak ve eğer açıkça "
+"ölçülebilir bir iyileşme yoksa, değişikliği geri almak.</p>"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: server_status.php:784
