Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -7011,11 +7011,10 @@ msgid "Start"
 msgstr "開始"
 
 #: libraries/rte/rte_events.lib.php:457
-#, fuzzy
 #| msgid "End"
 msgctxt "End of recurring event"
 msgid "End"
-msgstr "最後"
+msgstr "終了"
 
 #: libraries/rte/rte_events.lib.php:465 libraries/rte/rte_routines.lib.php:912
 #: libraries/rte/rte_triggers.lib.php:354
