Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-11 15:11+0200\n"
-"PO-Revision-Date: 2011-08-12 11:48+0200\n"
+"PO-Revision-Date: 2011-08-12 12:16+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -10068,7 +10068,6 @@ msgid ""
 msgstr ""
 
 #: server_status.php:1454
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/> Ok, you are good to go! Once you click "
 #| "'Start monitor' your browser will refresh all displayed charts in a "
@@ -10088,13 +10087,11 @@ msgid ""
 "confirmed, this will load a table of grouped queries, there you may click on "
 "any occuring SELECT statements to further analyze them.</p>"
 msgstr ""
-"<b>モニタの使い方：</b><br/>「モニタ開始」をクリックすると、ブラウザは一定間"
-"隔で表示されている全てのグラフを更新します。「設定」のところよりグラフを追加"
-"や再描画間隔の変更が行え、それぞれのグラフにある歯車のアイコンを通じて削除を"
-"行えます。<p>モニタリングしていてスパイク信号が見られることがあります。マウス"
-"の左ボタンを押したままグラフの上をドラッグするように移動させことで、グラフの"
-"任意の期間を選択できます。こうすることでログから統計の読み込みが行え、スパイ"
-"ク信号の原因を探ることができます。</p>"
+"<b>モニタの使い方：</b><br/>「モニタ開始」をクリックすると、ブラウザは一定間隔で表示されている全てのグラフを更新します。「設定」のところより"
+"グラフを追加や再描画間隔の変更が行え、それぞれのグラフにある歯車のアイコンを通じて削除を行えます。<p>ログからクエリ分析を行うには、グラフで該当期間を"
+"選択します。マウスの左ボタンを押したままグラフの上をドラッグするように移動させてください。こうすることで、グラフの任意の期間を選択できます。グループ毎に"
+"分類されたクエリが読み込まれ表示されますので、実行されたクエリを確認することができます。SELECT "
+"文の部分をクリックすることで、更なるクエリ解析が可能です。</p>"
 
 #: server_status.php:1459
 msgid ""
