--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:22+0200\n"
-"PO-Revision-Date: 2011-08-12 12:16+0200\n"
+"PO-Revision-Date: 2011-08-12 12:24+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -9207,7 +9207,7 @@ msgstr "モニタ"
 
 #: server_status.php:690
 msgid "Advisor"
-msgstr "アドバイザ"
+msgstr "生の値（書式化なし）で表示する"
 
 #: server_status.php:700 server_status.php:722
 msgid "Refresh rate: "
