--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:22+0200\n"
-"PO-Revision-Date: 2011-08-12 12:24+0200\n"
+"PO-Revision-Date: 2011-08-12 12:25+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -9226,10 +9226,9 @@ msgid "Filter by category..."
 msgstr "種別によるフィルタ..."
 
 #: server_status.php:765
-#, fuzzy
 #| msgid "Show only alert values"
 msgid "Show unformatted values"
-msgstr "警告値のみ表示する"
+msgstr "生の値（書式化なし）で表示する"
 
 #: server_status.php:769
 #, fuzzy
